# Habito

./: README.md  app.vue  nuxt.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt
components/: AppFooter.vue  AppNavbar.vue
middleware/: auth.ts
pages/: about.vue  confirm.vue  contact.vue  index.vue  license.vue  login.vue
src/: main.py
src/core/: config.py  logger.py
src/crud/: task.py
src/datastore/: mongo.py  redis.py
src/models/: habit.py  task.py  token.py  user.py
src/routes/: auth.py  health.py  main.py  task.py
src/utils/: jwt.py
tests/: test_main.py
