[project]
name = "Habito"
version = "0.1.0"
description = "A simple portal to track your habits and todos."
readme = "README.md"
requires-python = ">=3.12"
keywords = ["tracker", "tasks", "todos", "habits"]
authors = [{ name = "Ratan Kulshreshtha", email = "ratan.shreshtha@gmail.com" }]
maintainers = [{ name = "Ratan Kulshreshtha", email = "ratan.shreshtha@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
]

dependencies = [
    "fastapi",
    "httpx",
    "rich",
    "pydantic",
    "pydantic-settings",
    "uvicorn",
]

[project.optional-dependencies]
test = ["pytest"]
format = ["black", "isort"]

[project.urls]
homepage = "https://habito.app"
repository = "https://github.com/RatanShreshtha/Habito"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
